--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ h1,h4
 <center>
 <h1>Race</h1>
 <canvas id="myCanvas" width="800" height="600"></canvas>
+<h1>
+	<b class="text-danger" id="status"></b>
+</h1>
 <h4>
 	<b class="text-danger">NOTE : IF CAR IS NOT VISIBLE PRESS ANY ARROW KEY</b>
 </h4>
